@@ -32,7 +32,6 @@ License:
 */
 
 /*global
-    DEBUG,
     define
 */
 
@@ -57,22 +56,22 @@ define([], function () {
 
     States.prototype.stateColor = function (state) {
         if (typeof state === "undefined") {
-            return "Grey";
+            return "var(--SNMD_undefined)";
         }
             
         if (state === 0) {
-            return 'LimeGreen';
+            return 'var(--SNMD_ok)';
         }
         
         if (state === 1) {
-            return 'Gold';
+            return 'var(--SNMD_warning)';
         }
 
         if (state === 2) {
-            return 'Crimson';
+            return 'var(--SNMD_critical)';
         }
 
-        return "Orange";
+        return "var(--SNMD_unknown)";
     };
 
     States.prototype.stateName = function (state) {
