@@ -4,6 +4,7 @@ nag2mqtt (0.4.2) unstable; urgency=low
     - MQTT: change #snmd-hb color to match state colors
     - SVG: clear fill and stroke styles for SVG elements with 'snmd-(fill|stroke)-'
            class applied - enables colorswapping for solarized theming in SVG
+    - States: use CSS3 variables for state colors
 
  -- Thomas Liske <thomas@fiasko-nw.net>  
 
